fixing icons wrap

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 .desktopIcons {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     padding: 1rem;
     color:white;
     font-size: 1rem;
